<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvConfirmarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirmar_datos"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="@string/confirmar_datos"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/cardview_compat_inset_shadow"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/texto_nombre"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="casual"
                android:text="@string/texto_prueba"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/cardview_compat_inset_shadow"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvFechaDeNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/texto_fecha_nacimiento"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvMostrarFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="casual"
                android:text="@string/texto_prueba"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvTelefono2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/texto_telefono"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="casual"
                android:text="@string/texto_prueba"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="@string/texto_prueba"
                tools:visibility="visible" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/cardview_compat_inset_shadow"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvEmail2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/texto_email"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvMostrarEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="casual"
                android:text="@string/texto_prueba"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvDescripcionContacto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/cardview_default_elevation"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/texto_descripcion"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvMostrarDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:fontFamily="casual"
                android:text="@string/texto_prueba"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:cursorVisible="true"
            android:focusable="true"
            android:onClick="editarFor"
            android:text="@string/texto_editar"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            tools:text="@string/texto_editar"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>